fixed auth form width on mobile screen

--- a/src/components/AuthForm/AuthForm.module.scss
+++ b/src/components/AuthForm/AuthForm.module.scss
@@ -101,4 +101,8 @@
 
 .inputContainer {
   width: 455px;
+
+  @media (max-width: 600px) {
+    width: 100%;
+  }
 }
